--- a/package.json
+++ b/package.json
@@ -9,19 +9,21 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/uuid": "^8.3.0",
     "reflect-metadata": "^0.1.13",
-    "serverless": "^2.11.1",
-    "serverless-appsync-plugin": "^1.4.0",
+    "serverless": "^2.22.0",
+    "serverless-appsync-plugin": "^1.6.0",
     "serverless-appsync-simulator": "^0.11.0",
     "serverless-offline": "^6.8.0",
     "serverless-webpack": "^5.3.5",
-    "ts-loader": "^8.0.11",
-    "typescript": "^4.0.5",
-    "webpack": "^5.4.0",
+    "ts-loader": "^8.0.15",
+    "typescript": "^4.1.3",
+    "webpack": "^5.21.1",
     "webpack-node-externals": "^2.5.2"
   },
   "dependencies": {
     "inversify": "^5.0.5",
-    "source-map-support": "^0.5.19"
+    "source-map-support": "^0.5.19",
+    "uuid": "^8.3.2"
   }
 }
