--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "local": "docker-compose up"
+    "local": "export SLS_DEBUG=* && serverless offline start"
   },
   "author": "",
   "license": "ISC",
