--- a/serverless.yml
+++ b/serverless.yml
@@ -16,11 +16,7 @@ package:
   patterns:
     - '!node_modules/aws-sdk/**'
 
-functions:
-  default:
-    name: ${self:provider.stage}-serverless-appsync-template-lambda
-    handler: src/api/handler.graphqlHandler
-    role: LambdaServiceRole
+functions: ${file(./config/functions.yml)}
 
 custom:
   webpack:
@@ -29,93 +25,6 @@ custom:
   appsync-simulator:
     location: ".webpack/service"
     watch: false
-  appSync:
-    name: ${self:provider.stage}-serverless-appsync-template
-    authenticationType: AMAZON_COGNITO_USER_POOLS
-    userPoolConfig:
-      awsRegion: ${self:provider.region}
-      # TODO: Change userPool when deploy
-      userPoolId: XXXXXXXXX
-      defaultAction: ALLOW
-    # TODO: If you want to use API_KEY, use it
-    # authenticationType: API_KEY
-    # apiKeys:
-    #   - name: myapikey
-    #     description: 'My api key'
-    #     expiresAfter: 30d
-    schema:
-      - graphql/schema.graphql
-      - graphql/query.graphql
-      - graphql/mutation.graphql
-      - graphql/types/user.graphql
-      - graphql/inputs/inputCreateUser.graphql
-    defaultMappingTemplates:
-      # For Direct Lambda Resolvers
-      request: false
-      response: false
-    mappingTemplates:
-      # Queries
-      - field: me
-        type: Query
-        dataSource: MyLambda
-      # Mutations
-      - field: createUser
-        type: Mutation
-        dataSource: MyLambda
-    dataSources:
-      - type: AWS_LAMBDA
-        name: MyLambda
-        description: 'This is Sample API'
-        config:
-          functionName: default
-          serviceRoleArn: { Fn::GetAtt: [AppSyncServiceRole, Arn] }
+  appSync: ${file(./config/appsync.yml)}
 
-resources:
-  Resources:
-    AppSyncServiceRole:
-      Type: "AWS::IAM::Role"
-      Properties:
-        RoleName: "ServerlessAppSyncTemplate-AppSyncServiceRole"
-        AssumeRolePolicyDocument:
-          Version: "2012-10-17"
-          Statement:
-            - Effect: "Allow"
-              Principal:
-                Service:
-                  - "appsync.amazonaws.com"
-              Action:
-                - "sts:AssumeRole"
-        Policies:
-          - PolicyName: "ServerlessAppSyncTemplate-AppSyncServiceRolePolicy"
-            PolicyDocument:
-              Version: "2012-10-17"
-              Statement:
-                - Effect: "Allow"
-                  Action:
-                    - "lambda:invokeFunction"
-                  Resource:
-                    - "arn:aws:lambda:${self:provider.region}:*:function:*"
-                    - "arn:aws:lambda:${self:provider.region}:*:function:*:*"
-    LambdaServiceRole:
-      Type: "AWS::IAM::Role"
-      Properties:
-        RoleName: "ServerlessAppSyncTemplate-LambdaServiceRole"
-        AssumeRolePolicyDocument:
-          Version: "2012-10-17"
-          Statement:
-            - Effect: "Allow"
-              Principal:
-                Service:
-                  - "lambda.amazonaws.com"
-              Action:
-                - "sts:AssumeRole"
-        Policies:
-          - PolicyName: "ServerlessAppSyncTemplate-LambdaServiceRolePolicy"
-            PolicyDocument:
-              Version: "2012-10-17"
-              Statement:
-                - Effect: "Allow"
-                  Action:
-                    - dynamodb:*
-                  Resource:
-                    - "arn:aws:dynamodb:${self:provider.region}:*:table/*"
+resources: ${file(./config/resources.yml)}
